# claude-skills

./: .dockerignore  .env.production.example  .env.staging.example  .eslintrc.json  .gitignore  .prettierignore  AUDIT_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  FEATURE_7_README.md  FULL_CODE_INDEX.md  GITHUB_SETUP.md  MVP_TESTING_GUIDE.md  MVP_TEST_GUIDE.md  PLUGIN_INTEGRATION_GUIDE.md  PLUGIN_SYSTEM.md  PLUGIN_SYSTEM_QUICKSTART.md  PROJECT_STRUCTURE.md  README.md  RUNBOOK.md  SKILLS_CATALOG.md  SKILL_DEVELOPMENT_GUIDE.md  TESTING.md  TESTING_READINESS.md  changes  docker-compose.production.yml  docker-compose.staging.yml  index.html  package-lock.json  package.json  pytest.ini  requirements-dev.txt  setup-tests.sh
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.husky/: pre-commit  pre-push
algorithmic-art/: plugin.json
api-design-reviewer/: SKILL.md
api-documentation-writer/: SKILL.md
backend/: FEATURE_4_README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/analysis/: measure_analysis.py  metrics.py  score_following.py
backend/app/api/endpoints/: analysis.py  health.py
backend/app/celery/: __init__.py  tasks.py
backend/app/schemas/: analysis.py
brand-guidelines/: plugin.json
caiovillani-agent/: README.md  SKILL.md
canvas-design/: plugin.json
code-reviewer/: SKILL.md
deal-machine-agent/: .env  .env.example  GITHUB_REPO.md  QUICKSTART.md  README.md  SUMMARY.md  TESTING.md  claude_mcp_config.json  demo.py  demo_v2.py  manifest.json  mcp_server.py  test_api.py  test_leads.py
deal-machine-mcp/: .env.example  DEPLOYMENT.md  EXAMPLES.md  LICENSE  QUICK_START.md  README.md  SKILL.md  TEST_RESULTS.md  package-lock.json  package.json  test-api-simple.js  test-api.js  test-client.js  test-mcp-tools.js
docker/: Dockerfile.backend  nginx-default.conf  (+2 more)
(+211 files in other folders)
